# macro-veritas

./: README.md  project.yaml  pyproject.toml
config/: project.yaml
docs/: api_specs.md  architecture.md  audit_policy.md  avcp_guidelines.md  card_contracts.md  claim_ingest_locking_policy.md  claimcard_runtime.md  cli_command_contracts.md  constraints.md  data_contracts.md  datasetcard_runtime.md  decisions.md  delete_locking_policy.md  dev_log.md  gateway_contracts.md  governance_spec.md  index.md  ingest_locking_policy.md  ingest_studycard_runtime.md  module_map.md  payload_contracts.md  project_charter.md  public_delete_cli.md  public_ingest_claimcard_cli.md  public_ingest_claimcard_from_file.md  public_ingest_datasetcard_cli.md  public_ingest_datasetcard_from_file.md  public_ingest_studycard_cli.md  public_ingest_studycard_from_file.md  public_list_cli.md  public_show_cli.md  public_update_claimcard_cli.md  public_update_datasetcard_cli.md  public_update_studycard_cli.md  readme.template.md  registry_io_boundary.md  registry_layout.md  registry_model.md  state.md  state_machine.md  (+3 more)
macro_veritas/: __init__.py
prompts/: AVCP_SYSTEM_PROMPT_MIN.md
tests/: test_card_contracts.py  test_claim_ingest_locks.py  test_claimcard_runtime.py  test_cli.py  test_command_contracts.py  test_datasetcard_runtime.py  test_delete_locks.py  test_ingest_claimcard_command.py  test_ingest_locks.py  test_ingest_studycard_command.py  test_payload_contracts.py  test_public_delete_cli.py  test_public_ingest_claimcard_cli.py  test_public_ingest_claimcard_from_file.py  test_readme_gen.py  (+16 more)
(+49 files in other folders)
